--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Typescript curse</title>
-</head>
+  </head>
 
-<body>
-
-</body>
-
+  <body></body>
 </html>
+
+XMLHttpRequest = require('xmlhttprequest').XMLHttpRequest; WebSocket =
+require('websocket').w3cwebsocket;
